syntax = "proto3";

package users_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "users-service/pkg/users_v1;users_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Auth API"
    version: "0.1.0"
    contact: {
      name: "Mikhail Savchuk"
      email: "mikhaildisav@gmail.com"
    };
  };

  host: "localhost:8000",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UsersV1{
  //Создаёт нового пользователя
  rpc Create(CreateRequest) returns(CreateResponse){
    option (google.api.http) = {
      post: "/auth_v1/v1/create"
      body: "*"
    };
  }
  rpc Get(GetRequest) returns(GetResponse){
    option (google.api.http) = {
      get: "/auth_v1/v1"
    };
  }
  rpc Update(UpdateRequest) returns(google.protobuf.Empty){
    option (google.api.http) = {
      patch: "/auth_v1/v1"
      body: "*"
    };
  }
  rpc Delete(DeleteRequest) returns(google.protobuf.Empty){
    option (google.api.http) = {
      delete: "/auth_v1/v1"
    };
  }
}

enum Role {
  user = 0;
  admin = 1;
}

message User {
  int64 id = 1;
  string name = 2 ;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
}

message CreateUser {
  //Имя пользователя
  string name = 1 [(validate.rules).string.min_len = 4, (validate.rules).string.max_len = 16];
  //Email пользователя
  string email = 2;
  //Пароль пользователя
  string password = 3 [(validate.rules).string.min_len = 8, (validate.rules).string.max_len = 24];
  string password_confirm = 4;
  //Роль пользователя
  Role role = 5;
}

message UpdateUser {
  int64 id = 1;
  google.protobuf.StringValue name = 2 [(validate.rules).string.min_len = 4, (validate.rules).string.max_len = 16];
  google.protobuf.StringValue email = 3;
  google.protobuf.StringValue password = 4 [(validate.rules).string.min_len = 8, (validate.rules).string.max_len = 24];
}

message CreateRequest {
  CreateUser user = 1;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  User user = 1;
}

message UpdateRequest {
  UpdateUser user = 1;
}

message DeleteRequest {
  int64 id = 1;
}